# fudly-bot

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pylance-notes.txt  .vercelignore  A1_RegionalMix.csv  AGENTS.md  API_SYNC_DOCUMENTATION.md  ARCHITECTURE.md  AUDIT_UI_DATA.md  BOOKING_DEBUG.md  CHANGELOG_RENDER.md  CLIENT_WEBAPP_AUDIT_2024.md  CLIENT_WEBAPP_DESIGN_ANALYSIS.md  COMPLETE_PROJECT_AUDIT_2024-12-28.md  CRITICAL_FIXES_2024-12-18.md  CRITICAL_FIX_CONNECTION_POOL.md  CRITICAL_FIX_HANDLERS_DB.md  DATABASE_SCHEMA_ANALYSIS.md  DEBUG_UX_IMPROVEMENTS.md  DELIVERY_FLOW_FIX.md  DELIVERY_ORDER_CREATION_FIX.md  DEPLOY.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_GITHUB.md  DEPLOY_RAILWAY.md  DEV_SETUP.md  Dockerfile  ESTABLISHMENTS_FIX.md  FIXES_SUMMARY.md  FIX_SUMMARY.md  FULL_AUDIT_ORDERS_PRODUCTS.md  FULL_PROJECT_AUDIT_2024-12-15.md  FULL_PROJECT_AUDIT_2024-12-18.md  FULL_PROJECT_AUDIT_2024-12-21.md  GO_LIVE_CHECKLIST.md  IMPLEMENTATION_PLAN.md  INTEGRATION_OVERVIEW.md  (+166 more)
NEW CLICK_API/: click_api_scenario2.xml
app/: __init__.py
database_pg_module/: __init__.py  core.py  crypto.py  database.py  schema.py
docs/: AUDIT_FIXES_APPLIED.md  AUDIT_REPORT.md  BACKEND_AUDIT_2024-12-18.md  BOT_FLOWS.md  BOT_FLOW_OVERVIEW_RU.md  BUGFIX_PHONE_REGISTRATION.md  COLOR_CONTRAST_FIX.md  COMPONENT_INVENTORY.md  CRITICAL_BUGS.md  CRITICAL_FIXES_V25_1.md  DATABASE_SCHEMA_AUDIT.md  DEPLOYMENT_GUIDE.md  DESIGN_UX_AUDIT.md  EXEC_SUMMARY.md  FINAL_REPORT.md  FRONTEND_AUDIT.md  FULL_ORDER_AUDIT_2025-12-18.md  FULL_PROJECT_AUDIT_2024-12-17.md  FULL_PROJECT_AUDIT_2024.md  FULL_SYSTEM_AUDIT_V25.md  MIGRATION_GUIDE_20251217.md  MINIAPP_CLIENT_TODO.md  MINI_APP_ORDER_FLOW.md  MINI_APP_ORDER_SYSTEM.md  OPTIMIZATION_PLAN.md  ORDERS_TZ.md  ORDER_FLOW_INVENTORY.md  ORDER_PAYMENT_AUDIT.md  ORDER_SYSTEM_AUDIT.md  ORDER_SYSTEM_UNIFIED_ANALYSIS.md  ORDER_TYPES_OPTIMIZATION_PLAN.md  ORDER_TYPES_V25_IMPLEMENTATION.md  PARTNER_PANEL_FULL_AUDIT.md  PARTNER_PANEL_PHOTO_FIX.md  PARTNER_PANEL_SENIOR_ANALYSIS.md  PARTNER_PANEL_SENIOR_AUDIT_2025-12-18.md  PARTNER_PANEL_UX_IMPROVEMENTS.md  PARTNER_PANEL_V2_FEATURES.md  PLAN_LAVKA_ADAPTATION.md  PRODUCTS_SECTION_AUDIT.md  (+32 more)
examples/: import_example.csv
handlers/: README.md  __init__.py  admin.py  admin_panel.py  admin_stats.py  booking_rating.py  bookings.py  bookings_create.py  bookings_flow.py  bookings_notify.py  bookings_utils.py  common.py  common_user.py  help.py  offers.py  orders.py  partner.py  registration.py  search.py  user_commands.py  user_features.py
load_tests/: load_test_api.py  load_test_db.py  load_test_pg.py  run_api_load_test.py  run_api_with_db.py  seed_test_data_pg.py
locales/: messages.pot
migrations/: 001_add_pickup_fields.sql  (+16 more)
(+723 files in other folders)
